# cam_vision

./: .gitignore  CMakeLists.txt
AndroidStudio/: settings.gradle
AndroidStudio/CamVision/: AndroidManifest.xml  build.gradle
AndroidStudio/CamVision/res/layout/: activity_main.xml
AndroidStudio/CamVision/res/values/: strings.xml
AndroidStudio/CamVision/src/com/github/camvision/: CamVision.java  GLView.java  MainActivity.java
AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
QT/src/: main.cpp  mainwindow.cpp  mainwindow.h
src/: cv_camera.cpp  cv_camera.h  engine.cpp  engine.h  icamera.h  logger.hpp  resourceloader.h  sprite.h
src/android/: androidresourceloader.cpp  androidresourceloader.h  cam_vision.cpp  native_camera.cpp  native_camera.h
src/assets/: sprite_vs.txt
src/desktop/: fileresourceloader.cpp  fileresourceloader.h
src/math/: common.h  mat.cpp  mat.h  mat44.cpp  mat44.h  vector.cpp  vector.h
src/rendering/: camera.h  glesrenderer.cpp  glesrenderer.h  renderer.h
